--- a/module/Application/view/application/reportes/index.phtml
+++ b/module/Application/view/application/reportes/index.phtml
@@ -8,3 +8,8 @@
         <a href="<?= $this->url("reportes", ["action" => "comprasDebito"]) ?>">Compras Tarjeta de Débito</a>
     </div>
 </div>
+<div class="row">
+    <div class="col-md-12">
+        <a href="<?= $this->url("reportes", ["action" => "categoriaMovimiento"]) ?>">Movimientos por categoria</a>
+    </div>
+</div>
